Add support file
- boundary test method
- get placeholder method
- get value method
- random number method
- random string method
- varios Expected Condition wrappers

--- a/.jshintrc
+++ b/.jshintrc
@@ -22,5 +22,12 @@
     "unused": true,
 
     // Environment
-    "node": true
+    "node": true,
+
+    "globals":{
+        "browser": false,
+        "by": false,
+        "element": false,
+        "protractor": false
+    }
 }
